syntax = "proto3";

option go_package = "github.com/viqueen/besto/_api/go-sdk/platform/identity/v1;identityV1";

import "platform/identity/v1/models.proto";

service IdentityService {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignOut(SignOutRequest) returns (SignOutResponse);
}

message SignUpRequest {
  IdentityProfile profile = 1;
}

message SignUpResponse {
  Identity identity = 1;
}

message SignInRequest {
  IdentityProfile profile = 1;
}

message SignInResponse {
  Identity identity = 1;
}

message SignOutRequest {}

message SignOutResponse {}